# openwrt

include/: kernel-version.mk
package/asus-rt-ac87u/: Makefile
package/asus-rt-ac87u/base-files/etc/uci-defaults/: asus-rt-ac87u
package/libqcsapi/: Makefile
package/libqcsapi/src/: CMakeLists.txt
